--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -3,11 +3,6 @@
     margin-top:50px;
 }
 
-form {
-    float:left;
-    margin-left:50px;
-}
-
 #removeResults{
     float:right;
     margin-right:50px;
@@ -17,11 +12,42 @@ form {
     float:right;
 }
 
-.images{
+/*.images{
     margin-top:20px;
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 50%;
+}*/
+
+.Search form {
+    float:left;
+    margin-left:20%;
 }
+
+.searchInput{
+    padding: 10px;
+    width: 400%;
+    height: 30px;
+    border-radius: 50px 50px 50px 50px;
+    border-style: none;
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 15px;
+    font-size: 18px;
+}
+
+.submit{
+    display: none;
+}
+
+.grid{
+    /*display: grid;*/
+    margin-left:20px;
+}
+
+.Content{
+    padding-top:100px;
+    margin-left:5%;
+    margin-right:5%;
+}
+
 
