--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -1,35 +1,75 @@
 /*Home.css includes Home.js, Content.js, and Search.js*/
-.Home{
-    margin-top:50px;
+
+.homeHeader{
+    background-color: rgb(248, 248, 248);
+    height: 100px;
+    padding-top: 50px;}
+
+a {
+    font-family: 'Avenir', sans-serif;
+    text-decoration:none;
+    color:white;
 }
 
-#removeResults{
-    float:right;
-    margin-right:50px;
+.btn{
+    font-family: 'Avenir', sans-serif;
+    border-radius: 50px;
+    font-size: 18px;
+    border: none;
+    color:white;
+    padding: 12px 26px;
+    text-align: center;
+    background-color: #E8423F;
+    transition: 0.3s;
+    cursor: pointer;
+  }
+  
+  .btn:hover {
+    text-decoration: none;
+      background-color: #FF94AB;
 }
 
 #create{
-    float:right;
+    margin-right: 6.5%;
+    float: right;
 }
 
-/*.images{
-    margin-top:20px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-}*/
+#clear{
+    margin-right: 2%;
+    float: right;
+    display: none;
+}
 
-.Search form {
+#nextPage{
+    margin-right: 2%;
+    margin-bottom: 2%;
+    float: right;
+}
+
+#back {
+    float: left;
+    margin-left: 6.5%;
+}
+
+.logo {
+    display: block;
+    width: 120px;
     float:left;
-    margin-left:20%;
+    margin-left:6.5%;
+    margin-top: -5px;
+}
+
+.Search {
+    float:left;
+    margin-left:3%;
+    
 }
 
 .searchInput{
-    padding: 10px;
+    padding: 10px 10px 10px 20px;
     width: 400%;
     height: 30px;
-    border-radius: 50px 50px 50px 50px;
+    border-radius: 50px;
     border-style: none;
     box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 15px;
     font-size: 18px;
@@ -39,15 +79,62 @@
     display: none;
 }
 
-.grid{
-    /*display: grid;*/
-    margin-left:20px;
-}
-
 .Content{
-    padding-top:100px;
-    margin-left:5%;
-    margin-right:5%;
+    width: 90%;
+    height: auto;
+    overflow: hidden;
+    margin: 0 auto;
 }
 
+.grid {
+  margin: 20px auto;
+}
 
+.images {
+    padding: 10px;
+    
+}
+
+.grid div span {
+    position: absolute;
+    bottom: 75px;
+    right: 65px;
+    z-index: 1;
+}
+.likeButton{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    background-color: transparent;
+    border-color: transparent;
+    color: transparent;
+}
+
+#heart {
+    width: 40px;
+    cursor: pointer;
+}
+
+@media only screen and (max-width: 1500px) {
+    .searchInput {width: 300%;}
+    .logo {width: 100px}
+}
+
+@media only screen and (max-width: 1300px) {
+    .searchInput {width: 200%;}
+}
+
+@media only screen and (max-width: 1000px) {
+    .searchInput {width: 130%;}
+}
+
+@media only screen and (max-width: 800px) {
+    .searchInput {width: 100%;}
+}
+
+@media all and (max-width: 700px) {
+   
+}
