Created draggable images using react-draggable

--- a/src/css/Moodboard.css
+++ b/src/css/Moodboard.css
@@ -13,10 +13,6 @@
     height:89%;
 }
 
-/*.react-draggable{
-    max-width: 100%;
-}*/
-
 .sidebar img{
     max-width: 100%;
 }
@@ -26,4 +22,5 @@
     height: 850px;
     margin-left:15%;
     border: 2px solid black;
+    position:relative;
 }
