--- a/src/css/Moodboard.css
+++ b/src/css/Moodboard.css
@@ -1,5 +1,5 @@
 .moodHeader{
-    background-color: rgb(248, 248, 248);
+    /*background-color: rgb(248, 248, 248);*/
     height: 50px;
     padding-top: 25px;
     padding-bottom: 25px;
@@ -57,9 +57,12 @@
 
 .addButton {
     border:none;
-    background-color: transparent;
+    /*background-color: transparent;*/
 }
 
 .plus {
     width: 30px;
+}
+.draggable{
+    position:absolute;
 }
