--- a/src/css/Moodboard.css
+++ b/src/css/Moodboard.css
@@ -1,10 +1,9 @@
 .moodHeader{
-    /*background-color: rgb(248, 248, 248);*/
+    background-color: rgb(248, 248, 248);
     height: 50px;
     padding-top: 25px;
     padding-bottom: 25px;
 }
-
 
 .sidebar {
     width: 15%;
@@ -15,18 +14,25 @@
 
 .sidebar img{
     max-width: 100%;
+    position: relative;
 }
 
 .canvas{
-    max-width: 100%;
-    height: 850px;
-    margin-left:15%;
-    border: 2px solid black;
-    position:relative;
+    width: 81%;
+    height: 80%;
+    margin-left:17%;
+    margin-top:2%;
+    border: 2px solid white;
+    position: fixed;
+}
+
+.draggable{
+    position:absolute;
+    cursor: pointer;
+
 }
 
 .moodImages {
-    position: absolute;
 }
 
 .colorPicker {
@@ -34,8 +40,9 @@
     align-items: center;
     width: 140px;
     padding: 6px 12px;
-    margin-left: 100px;
-    border: 1px solid #bfc9d9;
+    margin-left: 5%;
+    border: none;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px;
     border-radius: 10px;
     background-color: white;
 }
@@ -44,6 +51,7 @@
     padding: 0px;
     border: transparent;
     height: 34px;
+    cursor: pointer;
 }
 
 .hexCode {
@@ -53,16 +61,89 @@
     text-transform: uppercase;
     width:70px;
     margin-left: 10px;;
+    letter-spacing: 1px;
 }
 
 .addButton {
     border:none;
-    /*background-color: transparent;*/
+    cursor: pointer;
+    position: relative;
+    margin-top: -20%;
+    margin-left: 80%;
+    width:15%;
+    height: 15%;
+    background-color: transparent;
 }
 
 .plus {
     width: 30px;
 }
-.draggable{
-    position:absolute;
+
+.sidebar div span {
+    display: flex;
+    z-index: 1;
+}
+
+.hoverMenu {
+    z-index: 2;
+    transition: all 300ms ease-in-out;
+    opacity: .0;
+}
+
+.draggable:hover .hoverMenu {
+    opacity: 1.0;
+}
+
+.draggable:hover .resize {
+    opacity: 1.0;
+}
+
+.front {
+    background-color: white;
+    border: none;
+    border-radius: 50px;
+    padding: 6px 8px;
+    cursor: pointer;
+    position: absolute;
+    top: 15px;
+    left: 15px;
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 15px;
+}
+
+.frontImage {
+    width: 30px;
+}
+
+.remove{
+    background-color: white;
+    border: none;
+    border-radius: 50px;
+    padding: 8px 10px;
+    cursor: pointer;
+    position: absolute;
+    top: 70px;
+    left: 15px;
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 15px;
+}
+
+.removeImage {
+    width: 25px;
+}
+
+.resize {
+    opacity: .0;
+    transition: all 300ms ease-in-out;
+    background-color: white;
+    border: none;
+    border-radius: 50px;
+    padding: 8px 10px;
+    cursor: pointer;
+    position: absolute;
+    right: -15px;
+    top: 88%;
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 15px;
+}
+
+.resizeImage {
+    width: 20px;
 }
