--- a/src/css/Moodboard.css
+++ b/src/css/Moodboard.css
@@ -72,7 +72,7 @@
     margin-left: 80%;
     width:15%;
     height: 15%;
-    background-color: transparent;
+    /*background-color: transparent;*/
 }
 
 .plus {
