--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -73,7 +73,8 @@ a {
 
 .searchInput{
     padding: 10px 10px 10px 20px;
-    width: 400%;
+    /*width: 400%;*/
+    width: 55vw;
     height: 30px;
     border-radius: 50px;
     border-style: none;
