--- a/src/css/Moodboard.css
+++ b/src/css/Moodboard.css
@@ -65,15 +65,20 @@
     border:none;
     cursor: pointer;
     position: relative;
-    margin-top: -20%;
-    margin-left: 80%;
-    width:15%;
-    height: 15%;
+    margin-top: -23%;
+    margin-left: 78%;
+    width:20%;
+    height: 20%;
     background-color: transparent;
 }
 
-.plus {
-    width: 30px;
+.addImage {
+    width: 45px;
+    transition: 0.5s;
+}
+
+.addImage:hover {
+    transform: scale(1.15);
 }
 
 .sidebar div span {
