--- a/src/css/Headers.css
+++ b/src/css/Headers.css
@@ -6,7 +6,8 @@
     padding-top: 50px;
 }
 .btn{
-    font-family: 'Avenir', sans-serif;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
     border-radius: 50px;
     font-size: 18px;
     border: none;
@@ -18,7 +19,6 @@
     cursor: pointer;
     display: inline-flex;
     box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 10px;
-
   }
   
 .btn:hover {
@@ -126,7 +126,7 @@
     border-style: none none none none;
     background-color: transparent;
     width:200px;
-    font-family: 'Avenir', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 22px;
     color: #353535;  
     outline:none;
@@ -137,7 +137,7 @@
 ::placeholder {
     font-size: 20px;
     color: rgb(116, 116, 116);
-    font-weight: 100;
+    font-weight: 500;
   }
   
   .moodForm div {
@@ -147,7 +147,8 @@
   }
 
 .downloadBtn {
-    font-family: 'Avenir', sans-serif;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
     border-radius: 50px;
     font-size: 18px;
     border: none;
@@ -157,7 +158,7 @@
     background-color: #E8423F;
     transition: 0.3s;
     cursor: pointer;
-    width: 135px;
+    width: 142px;
     box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 10px;
 
 }
