--- a/src/css/Modal.css
+++ b/src/css/Modal.css
@@ -23,9 +23,9 @@
 }
 
 .modalText p {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 500;
-    font-size: 20px;
+    font-family: 'Nunito', sans-serif;
+    font-weight: 600;
+    font-size: 22px;
     float: none;
     margin: 10px;
 }
