--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat');
-
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans&family=Open+Sans:wght@400;600;700&display=swap');
 
 body {
   margin: 0;
-  font-family: 'Montserrat'
 }
 
 code {
