--- a/src/css/Headers.css
+++ b/src/css/Headers.css
@@ -174,3 +174,32 @@
     text-decoration: none;
       background-color: #FF94AB;
 }
+
+
+@media only screen and (max-width: 1500px) {
+    .searchInput {width: 300%;}
+    .logo {width: 100px}
+}
+
+@media only screen and (max-width: 1300px) {
+    .searchInput {width: 200%;}
+}
+
+@media only screen and (max-width: 1000px) {
+    .searchInput {width: 130%;}
+}
+
+@media only screen and (max-width: 820px) {
+    .searchInput {width: 90%;}
+    #create { font-size: 17px;  margin-top: 10px; position: relative; float: right}
+    .homeHeader{ height: 120px;}
+}
+
+@media all and (max-width: 450px) {
+    .searchInput {width: 70%; height: 20px; position: relative; float: right}
+    .logo {width: 70px}
+    #create { font-size: 17px; width: 55%; margin-top: 10px; position: relative; float: right; }
+    .homeHeader{ height: 120px;}
+}
+
+
