--- a/src/css/Moodboard.css
+++ b/src/css/Moodboard.css
@@ -1,5 +1,4 @@
 /* Sidebar */
-
 *{
     font-family:'nunito';
 }
@@ -121,4 +120,27 @@
 
 .removeImage {
     width: 25px;
+}
+
+@media screen and (max-width:800px){
+    .canvas{
+        margin-top:50px;
+        margin-left:110px;
+        width:110%;
+    }
+
+    .addButton{
+        width:50px;
+        height:50px;
+        margin-top: -50px;
+        margin-left: 70px;
+    }
+
+    .sidebar{
+        width:100px;
+    }
+
+    .moodImages{
+        width:50%;
+    }
 }
