--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -77,3 +77,9 @@ a {
         z-index: 1; 
     }
 }
+
+@media all and (max-width: 850px) {
+    .ReactModalPortal{
+        display: none;
+    }
+}
